<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutFormFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="488dp">

        <EditText
            android:id="@+id/editTextFormTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_form_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextFormDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_form_description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextFormCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_form_category"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewFormPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/label_form_priority"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupFormPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonFormPriority1"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_form_priority_1" />

            <RadioButton
                android:id="@+id/radioButtonFormPriority2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_form_priority_2" />

            <RadioButton
                android:id="@+id/radioButtonFormPriority3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_form_priority_3" />

            <RadioButton
                android:id="@+id/radioButtonFormPriority4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_form_priority_4" />

            <RadioButton
                android:id="@+id/radioButtonFormPriority5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_form_priority_5" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextFormEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_form_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonFormSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/button_form_submit"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>